--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -17,9 +17,9 @@
                 <p class="header__logo">team.flow</p>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
-                        <li style="margin-right: 45px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png" alt="" /></li>
-                        <li style="margin-right: 48px;">Product <img src="../src/assets/image/down.png" alt=""/></li>
-                        <li style="margin-right: 39px;">Pricing </li>
+                        <li style="margin-right: 10px; width: 100px;height: 16px;">How it Works <img src="../src/assets/image/down.png" alt="" /></li>
+                        <li style="margin-right: 18px;">Product <img src="../src/assets/image/down.png" alt=""/></li>
+                        <li style="margin-right: 19px;">Pricing </li>
                         <li>Resources <img src="../src/assets/image/down.png" alt =""/></li>
                     </ul>
                 </nav>
@@ -29,23 +29,27 @@
                 </div>
             </header>
             <div class="banner__sign-up">
-                <div class="banner__save">
-                    <p>Save 90%</p>
+                <div class="banner__discount">
+                    <div class="banner__save">
+                        <p>Save 90%</p>
+                    </div>
+                    <div class="banner__get-acc">
+                        <p>Get account of $59 <img src="../src/assets/image/arrow.png" alt="get account of $59"/></p>
+                    </div>
                 </div>
-                <div class="banner__get-acc">
-                    <p>Get account of $59 <img src="../src/assets/image/arrow.png" alt="get account of $59"/></p>
+                <div class="banner__content">
+                    <h1 class="banner__heading">Manage the team everyone wants to be on</h1>
+                    <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
                 </div>
-                <h1>Manage the team everyone wants to be on</h1>
-                <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
                 <div class="banner__box">
                     <input id="text" type="text" placeholder="name@yourcompany.com"/>
                     <input id="submit"type="submit" value="Try it free"/>
                 </div>
-                <div style="width: 920px; height: 654.29px">
+                <div style="width: 920px; height: 729.29px">
                     <img class="graph" src="./assets/image/graph.png" alt="Graph" style="width: 100%; height: 100%"/>
                 </div>
                 <div class="banner__media-logo">
-                    <p>TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
+                    <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p> <br>
                     <div class="banner__logo">
                         <div style="width: 80px; height: 26.11px;">
                             <img class="gg" src="assets/image/google.png" alt="google" width="100%" height="100%"/>
@@ -94,7 +98,7 @@
                     </div>
                 </div>
                 <div class="content-area__functions">
-                    <h2>Make your work easier</h2><br>
+                    <h2 class="functions-heading">Make your work easier</h2><br>
                     <div class="feature__container">
                         <div class="feature">
                             <img src="./assets/image/report.png" alt=""/>
@@ -142,7 +146,10 @@
                     <div class="about-us-content">
                         <h2 style="width: 394px;height: 96px;">Why customers love working with us</h2>
                         <p>“It's amazing what has helped me learn about my team. I don't worry about blindspots anymore, and 1-on-1s have never been more productive. The team loves it.”</p>
-                        <img src="assets/image/cust-line.png" alt="" style="margin-left: 244px; margin-top: 47px;"/></div>
+                    </div>    
+                    <div style="width: 264px; height: 4px;">
+                        <img src="assets/image/cust-line.png" alt="" style="width: 100%; height: 100%;"/>
+                    </div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
                             <div style="width: 48px; height: 48px">
@@ -172,14 +179,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
                 <div class="content-area__install-section">
-                    <h3 style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
+                    <h3 class="install-section-heading" style="width: 423px; height: 96px;">84% of employees who use trust their direct manager</h3>
                     <div class="install-app">
                         <img class="gg-play" src="./assets/image/ggplay.png" alt=""/>
                         <img class="app-store"src="assets/image/appstore.png" alt=""/>
                     </div>
                 </div>
+             </div>
             </div>
             <footer>
                 <div class="footer__content">
@@ -226,7 +233,7 @@
                         <img class="icon" src="assets/image/youtube.png" alt=""/>
                     </div>
                 </div>
-              </footer>
+            </footer>
         </div>
     </div>
     <script src="../html-inspector.js"></script>
