--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -147,35 +147,47 @@
                         <h2 style="width: 394px;height: 96px;">Why customers love working with us</h2>
                         <p>“It's amazing what has helped me learn about my team. I don't worry about blindspots anymore, and 1-on-1s have never been more productive. The team loves it.”</p>
                     </div>    
-                    <div style="width: 264px; height: 4px;">
-                        <img src="assets/image/cust-line.png" alt="" style="width: 100%; height: 100%;"/>
-                    </div>
                     <div class="customers-feedbacks">
                         <div class="customer-pro">
-                            <div style="width: 48px; height: 48px">
-                                <img class="customer-ava" src="assets/image/jorge.png" alt="" style="width: 100%; height: 100%"/>
+                            <div class="baseline">
+                                <img src="assets/image/cust-line.png" alt="baseline" style="width: 100%; height: 100%;"/>
                             </div>
-                            <div class="name-job">
-                                <p class="name" >Jorge Robertson</p>
-                                <p class="job"> CS at Google</p>
+                            <div class="customer-infor">
+                                <div class="customer-ava" style="width: 48px; height: 48px">
+                                    <img  src="assets/image/jorge.png" alt="" style="width: 100%; height: 100%"/>
+                                </div>
+                                <div class="name-job">
+                                    <p class="name" >Jorge Robertson</p>
+                                    <p class="job"> CS at Google</p>
+                                </div>
                             </div>
                         </div>
                         <div class="customer-pro">
-                            <div style="width: 48px; height: 48px">
-                                <img class="customer-ava" src="assets/image/bell.png" alt="" style="width: 100%; height: 100%"/>
+                            <div class="baseline" style="visibility: hidden">
+                                <img src="assets/image/cust-line.png" alt="baseline" style="width: 100%; height: 100%;"/>
+                            </div>
+                            <div class="customer-infor">
+                                <div class="customer-ava"  style="width: 48px; height: 48px">
+                                <img src="assets/image/bell.png" alt="" style="width: 100%; height: 100%"/>
                             </div>
                             <div class="name-job">
                                 <p class="name">Francisco Bell</p>
                                 <p class="job"> Designer at Microsoft</p>
                             </div>
+                            </div>
                         </div>
                         <div class="customer-pro">
-                            <div style="width: 48px; height: 48px">
-                                <img class="customer-ava" src="assets/image/beth.png" alt="" style="width: 100%; height: 100%"/>
+                            <div class="baseline" style="visibility: hidden">
+                                <img src="assets/image/cust-line.png" alt="baseline" style="width: 100%; height: 100%;"/>
+                            </div>
+                            <div class="customer-infor">
+                                <div class="customer-ava" style="width: 48px; height: 48px">
+                                <img  src="assets/image/beth.png" alt="" style="width: 100%; height: 100%"/>
                             </div>
                             <div class="name-job">
                                 <p class="name" >Beth Fox</p>
                                 <p class="job"> Developer at Airbnb</p>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -223,9 +235,9 @@
                         </div>
                     </div>
                 </div>
-                <hr style="opacity: 10%; margin-top: 55px;">
-                <div class="copy-right">
-                    <p style="width: 540px;height: 14px;">© 2020 - All rights reserved</p>
+                <div class="line-footer"></div> 
+                <div class="footer__copy-right">
+                    <p class="copy-right" style="width: 540px;height: 14px;">© 2020 - All rights reserved</p>
                     <div class="social-icon">
                         <img class="icon" src="assets/image/ins.png" alt=""/>
                         <img class="icon" src="assets/image/basketball.png" alt=""/>
