--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -10,10 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-            <div class="banner" >
+            <div class="banner">
                 <header>
-                    <p class="header__logo">team.flow</p>
+                    <div class="header__logo">
+                        <img src="./assets/image/team.flow.png" alt="logo">
+                    </div>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
                             <li style="margin-right: 10px;">How it Works <img src="./assets/image/down.png" alt="arrow"></li>
@@ -69,12 +70,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
                 <div class="content-area">
-                    <div class="content-area__intro-product">
+                    <section class="product">
                         <div style="width: 657px; height: 518px">
                             <img class="timeline" src="./assets/image/timeline.png" alt="timeline">
                         </div>
-                        <div class="advantage">
+                        <div class="product__content">
                             <div class="survey-feature">
                                 <div class="text">
                                     <h4>Survey your team</h4>
@@ -96,55 +98,54 @@
                                 <p >Easy-to-read reports and sharable results help managers and teams.</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="content-area__functions">
-                        <h2 class="functions-heading">Make your work easier</h2>
-                        <br>
-                        <div class="feature__container">
-                            <div class="feature">
+                    </section>
+                    <section class="functions__container">
+                        <h2 class="functions__headline">Make your work easier</h2>
+                        <div class="feature">
+                            <div class="feature__descripstion">
                                 <img src="./assets/image/report.png" alt="Reports">
                                 <h5>Team Surveys & Reports</h5>
                                 <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                             </div>
-                            <div class="feature">
+                            <div class="feature__descripstion">
                                 <img src="./assets/image/collab.png" alt="Collaborative">
                                 <h5>Collaborative 1:1</h5>
                                 <p>Build relationships by planning 1-on-1s and start meetings.</p>
                             </div>
-                            <div class="feature">
+                            <div class="feature__descripstion">
                                 <img src="./assets/image/center.png" alt="Learning center">
                                 <h5>Learning Center</h5>
                                 <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                             </div>
-                            <div class="feature">
+                            <div class="feature__descripstion">
                                 <img src="./assets/image/mess.png" alt="Messaging">
                                 <h5>Anonymous Messaging</h5>
                                 <p>Develop trust in a safe channel for important conversations.</p>
                             </div>
-                            <div class="feature">
+                            <div class="feature__descripstion">
                                 <img src="./assets/image/conver.png" alt="Conversation">
                                 <h5>Conversation Engine</h5>
                                 <p>Communicate confidently with recommended talking points.</p>
                             </div>
-                            <div class="feature">
+                            <div class="feature__descripstion">
                                 <img src="./assets/image/manage.png" alt="Manager">
                                 <h5>Exclusives Manager</h5>
                                 <p>Access manager tips, activities and best practices from our team of experts.</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="content-area__charts">
+                    </section>
+                    <section class="charts">
                         <div class="chart__content">
                             <h2> We work how you work everyday</h2>
                             <p style="width: 413px;height: 72px;">Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
-                            <button type="submit">Get started free</button>
+                            <button>Get started free</button>
                         </div>
                         <div class="chart-image">
                             <img src="assets/image/charts.png" alt="Charts">
                         </div>
-                    </div>
-                    <div class="content-area__about-us">
-                        <div class="about-us-content">
+                    </section>
+                    <section class="about-us">
+                        <div class="about-us__content">
                             <h2 style="width: 394px;height: 96px;">Why customers love working with us</h2>
                             <p>“It's amazing what has helped me learn about my team. I don't worry about blindspots anymore, and 1-on-1s have never been more productive. The team loves it.”</p>
                         </div>
@@ -192,14 +193,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="content-area__install-section">
-                            <h3 class="install-section-heading">84% of employees who use trust their direct manager</h3>
+                        <div class="install-section">
+                            <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
                             <div class="install-app">
                                 <img class="gg-play" src="./assets/image/ggplay.png" alt="google play">
                                 <img class="app-store" src="assets/image/appstore.png" alt="appstore">
                             </div>
                         </div>
-                    </div>
+                    </section>
                 </div>
                 <footer>
                     <div class="footer__content">
@@ -248,7 +249,5 @@
                         </div>
                     </div>
                 </footer>
-            </div>
-        </div>
     </body>                         
 </html>
